Sodlering interactive elements finished.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
@@ -36,6 +36,12 @@
                 <DataTemplate DataType="{x:Type vms:OhmsLawBasicViewModel}">
                     <views:OhmsLawBasicView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:SolderingExtrasViewModel}">
+                    <views:SolderingExtrasView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:SolderingPracticeViewModel}">
+                    <views:SolderingPracticeView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
