--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
@@ -45,6 +45,9 @@
                 <DataTemplate DataType="{x:Type vms:ElectronicsInspirationViewModel}">
                     <views:ElectronicsInspirationView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:BreadboardTypesViewModel}">
+                    <views:BreadboardTypesView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
