Printed circuit board interactive element finished.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateTwoView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateTwoView.xaml
@@ -37,6 +37,9 @@
                 <DataTemplate DataType="{x:Type vms:SolderingStationViewModel}">
                     <views:SolderingStationView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:PCBDiagramViewModel}">
+                    <views:PCBDiagramView/>
+                </DataTemplate>
             </Viewbox.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Viewbox>
