--- a/SparkValueDesktopApplication/Views/AccountSettingsView.xaml
+++ b/SparkValueDesktopApplication/Views/AccountSettingsView.xaml
@@ -8,11 +8,11 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel HorizontalAlignment="Center">
         <TextBlock HorizontalAlignment="Center" Text="Account Settings"/>
-        <Separator/>
+        <Separator Style="{DynamicResource AccentColorControl}"/>
         <Button Content="Change your Username" Command="{Binding ResetUsernameCommand}"/>
         <Button Content="Update your Email Address" Command="{Binding ResetEmailAddressCommand}"/>
         <Button Content="Reset your Password" Command="{Binding ResetPasswordCommand}"/>
-        <Separator/>
+        <Separator Style="{DynamicResource AccentColorControl}"/>
         <Button Content="Reset your Account" Command="{Binding ResetAccountCommand}" Background="PaleVioletRed"/>
     </StackPanel>
 </UserControl>
