--- a/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
+++ b/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
@@ -23,6 +23,13 @@
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="Reset Verification:"/>
                         <TextBox x:Name="VerificationEntry" Text="{Binding PasswordVerification, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="150" MaxWidth="150" VerticalContentAlignment="Center"/>
+                        <Grid Margin="8 0">
+                            <Grid.ToolTip>
+                                <TextBlock MaxWidth="200" TextWrapping="Wrap" Text="Enter the string of characters found in the email."/>
+                            </Grid.ToolTip>
+                            <Ellipse Height="25" Width="25" Fill="Gainsboro"/>
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?"/>
+                        </Grid>
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="New Password:"/>
@@ -37,6 +44,13 @@
                                 </Binding>
                             </AP:PasswordBoxAttachedProperty.EncryptedPassword>
                         </PasswordBox>
+                        <Grid Margin="8 0">
+                            <Grid.ToolTip>
+                                <TextBlock MaxWidth="200" TextWrapping="Wrap" Text="Password must be 8 or more characters and contain at least 1 uppercase and lowercase character, 1 numerical character, and 1 special character."/>
+                            </Grid.ToolTip>
+                            <Ellipse Height="25" Width="25" Fill="Gainsboro"/>
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?"/>
+                        </Grid>
                     </StackPanel>
                     <!--#endregion-->
                     
