--- a/SparkValueDesktopApplication/Views/EmailChangeView.xaml
+++ b/SparkValueDesktopApplication/Views/EmailChangeView.xaml
@@ -20,6 +20,13 @@
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="New Email Address:"/>
                         <TextBox Text="{Binding EmailAddress}" MinWidth="150" MaxWidth="150"/>
+                        <Grid Margin="8 0">
+                            <Grid.ToolTip>
+                                <TextBlock MaxWidth="200" TextWrapping="Wrap" Text="Email address must be valid."/>
+                            </Grid.ToolTip>
+                            <Ellipse Height="25" Width="25" Fill="Gainsboro"/>
+                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?"/>
+                        </Grid>
                     </StackPanel>
 
                     <Grid VerticalAlignment="Bottom" HorizontalAlignment="Right">
