--- a/SparkValueDesktopApplication/App.xaml
+++ b/SparkValueDesktopApplication/App.xaml
@@ -21,10 +21,10 @@
             </Style.Triggers>
         </Style>
         <Style x:Key="BackgroundColorControl" TargetType="{x:Type Control}">
-            <Setter Property="Background" Value="#408f00"/>
+            <Setter Property="Background" Value="#5E8C61"/>
         </Style>
         <Style x:Key="BackgroundColorBorder" TargetType="{x:Type Border}">
-            <Setter Property="Background" Value="#408f00"/>
+            <Setter Property="Background" Value="#5E8C61"/>
         </Style>
         <Style x:Key="AccentColorControl" TargetType="{x:Type Control}">
             <Setter Property="Background" Value="#e5ab26"/>
