--- a/SparkValueDesktopApplication/Views/UsernameChangeView.xaml
+++ b/SparkValueDesktopApplication/Views/UsernameChangeView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SparkValueDesktopApplication.Views"
+             xmlns:vr="clr-namespace:SparkValueDesktopApplication.ValidationRules"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Margin="10" MinWidth="550" BorderBrush="Black" BorderThickness="2" CornerRadius="25" Style="{DynamicResource BackgroundColorBorder}">
@@ -19,7 +20,15 @@
                 <StackPanel VerticalAlignment="Center" Margin="10">
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="New Username:"/>
-                        <TextBox Text="{Binding Username}" MinWidth="150" MaxWidth="150"/>
+                        <TextBox VerticalContentAlignment="Center" Style="{DynamicResource ControlInError}" MinWidth="150" MaxWidth="150">
+                            <TextBox.Text>
+                                <Binding Path="Username" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                                    <Binding.ValidationRules>
+                                        <vr:UsernameRule/>
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </TextBox>
                         <Grid Margin="8 0">
                             <Grid.ToolTip>
                                 <TextBlock MaxWidth="200" TextWrapping="Wrap" Text="Username must be 8 to 25 characters long and contain no special characters."/>
@@ -28,7 +37,9 @@
                             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="?"/>
                         </Grid>
                     </StackPanel>
-                    
+
+                    <TextBlock MaxWidth="300" Foreground="LightYellow" Text="{Binding ErrorText}" HorizontalAlignment="Center" TextWrapping="Wrap" FontWeight="Bold"/>
+
                     <Grid VerticalAlignment="Bottom" HorizontalAlignment="Right">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
